bk_ida/gccida/c3/build_complex_type
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4529:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4530:1: error: must use 'enum' tag to refer to type 'debug_info_type'
debug_info_type v6; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4549:19: error: expected expression
v5 = ( tree_node *)*( ( _QWORD *)v4 + 1); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4549:8: error: use of undeclared identifier 'tree_node'
v5 = ( tree_node *)*( ( _QWORD *)v4 + 1); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4587:22: error: use of undeclared identifier 'unk_736FFA'
v8 = ( const char *)&unk_736FFA; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4592:22: error: use of undeclared identifier 'unk_73700E'
v8 = ( const char *)&unk_73700E; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4597:22: error: use of undeclared identifier 'unk_737024'
v8 = ( const char *)&unk_737024; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4602:22: error: use of undeclared identifier 'unk_737036'
v8 = ( const char *)&unk_737036; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/tree.c:4632:22: error: use of undeclared identifier 'unk_7370A7'
v8 = ( const char *)&unk_7370A7; 
                     ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_complex_type/src/obj/tree.o] Error 1
